[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Player1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=2]
[ext_resource path="res://ball.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Score System.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Window Borders.gd" type="Script" id=6]
[ext_resource path="res://Fonts/font.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Game.gd" type="Script" id=8]
[ext_resource path="res://font.tres" type="DynamicFont" id=9]
[ext_resource path="res://Player2 Multiplayer Hint.gd" type="Script" id=10]

[sub_resource type="Gradient" id=1]
interpolation_mode = 1
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 100 )

[sub_resource type="CircleShape2D" id=4]
radius = 31.0

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="DynamicFont" id=6]
size = 20
outline_color = Color( 0.239216, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="Player1" type="KinematicBody2D" parent="."]
position = Vector2( 150, 280 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player1"]
scale = Vector2( 10, 200 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource( 3 )

[node name="Player2" type="KinematicBody2D" parent="."]
position = Vector2( 910, 302 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player2"]
scale = Vector2( 10, 200 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="Player2"]
autostart = true

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 523, 302 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="Window Borders" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Top Border" type="StaticBody2D" parent="Window Borders"]
position = Vector2( 0, -10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Window Borders/Top Border"]
shape = SubResource( 5 )

[node name="Bottom Border" type="StaticBody2D" parent="Window Borders"]
position = Vector2( 0, -10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Window Borders/Bottom Border"]
shape = SubResource( 5 )

[node name="Score System" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CanvasLayer" type="Control" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 151.0

[node name="Container" type="HBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 262.0
margin_right = 762.0
margin_bottom = 151.0
rect_min_size = Vector2( 500, 0 )

[node name="Player1 Score" type="Label" parent="CanvasLayer/CenterContainer/Container"]
unique_name_in_owner = true
margin_right = 248.0
margin_bottom = 151.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="Player2 Score" type="Label" parent="CanvasLayer/CenterContainer/Container"]
unique_name_in_owner = true
margin_left = 252.0
margin_right = 500.0
margin_bottom = 151.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
valign = 1

[node name="Player2 Multiplayer Hint" type="Label" parent="CanvasLayer"]
margin_left = 728.0
margin_top = 21.0
margin_right = 1002.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_fonts/font = SubResource( 6 )
text = "Press ENTER to control second paddle"
align = 1
valign = 1
autowrap = true
script = ExtResource( 10 )

[connection signal="timeout" from="Player2/Timer" to="Player2" method="_on_Timer_timeout"]
[connection signal="scored" from="Ball" to="Score System" method="_on_scored"]
